# DS-life-expentancy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
ds_project_life_expentancy/: __init__.py  dataset.py  features.py  plots.py
ds_project_life_expentancy/modeling/: predict.py  train.py
notebooks/: BinomialDistribution.ipynb  PossionDistribution.ipynb  Theroem Limit Central.ipynb
notebooks/inspiracion/: life-expectancy-prediction.ipynb  life-expectancy.ipynb
